fixed main photo on mobile

--- a/files/main_style.css
+++ b/files/main_style.css
@@ -248,6 +248,7 @@
  .banner-wrap .banner-content div.paragraph { margin-bottom: 25px; font-size: 1.2em; }
  .banner-wrap .banner-content p { margin-bottom: 25px; font-size: 1.2em; }
  .wsite-section { height: auto !important; }
+ .wsite-section-bg-image {height:650px !important;}
  #wsite-mini-cart { position: fixed !important; top: inherit !important; bottom: 0px; left: 0 !important; z-index: 6; width: 100%; border: none; border-radius: 0; backface-visibility: hidden; -webkit-backface-visibility: hidden; -webkit-transition: all 300ms ease-in-out; -moz-transition: all 300ms ease-in-out; -ms-transition: all 300ms ease-in-out; -o-transition: all 300ms ease-in-out; transition: all 300ms ease-in-out; }
  #wsite-mini-cart.arrow-top:before, #wsite-mini-cart.arrow-top:after { border: none !important; }
  #wsite-mini-cart.arrow-left:before, #wsite-mini-cart.arrow-left:after { border: none !important; }
@@ -332,6 +333,7 @@
  .eventName{
      width:40%;
  }
+
  }
 
 div.paragraph ul, div.paragraph ol { padding-left: 3em !important; margin: 5px 0 !important; }
